--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -39,7 +39,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <IncludePath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Include;H:\Projects\DirectX\DirectX11-Engine.git\trunk\Engine\Common;$(IncludePath)</IncludePath>
     <LibraryPath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
     <ExecutablePath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Utilities\bin\x86;$(ExecutablePath)</ExecutablePath>
     <ReferencePath>$(ReferencesPath)</ReferencePath>
@@ -48,7 +48,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <IncludePath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Include;H:\Projects\DirectX\DirectX11-Engine.git\trunk\Engine\Common;$(IncludePath)</IncludePath>
     <LibraryPath>H:\SDK\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
     <ReferencePath>$(ReferencesPath)</ReferencePath>
@@ -94,6 +94,7 @@
   <ItemGroup>
     <ClCompile Include="CameraSystem.cpp" />
     <ClCompile Include="ColorShader.cpp" />
+    <ClCompile Include="Common\MathHelper.cpp" />
     <ClCompile Include="d3dSystem.cpp" />
     <ClCompile Include="EngineSystem.cpp" />
     <ClCompile Include="GraphicSystem.cpp" />
@@ -104,6 +105,7 @@
   <ItemGroup>
     <ClInclude Include="CameraSystem.h" />
     <ClInclude Include="ColorShader.h" />
+    <ClInclude Include="Common\MathHelper.h" />
     <ClInclude Include="d3dSystem.h" />
     <ClInclude Include="EngineSystem.h" />
     <ClInclude Include="GraphicSystem.h" />
